fixed small bug that was causing horizontal scrolling / content too wide for screen

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header{
     margin-top: 5%;
     padding: 15px 0 25px 0;
     background-color: rgb(250, 246, 241);
-    width: 100%;
+    max-width: 47.5%;
     position:sticky;
     top: 0;
     z-index: 1;
